--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1",
     "uuid": "^8.3.1"
   },
   "scripts": {
